Update Phase1/Code/Final Project Phase1.ipynb

--- a/Phase1/Code/Final Project Phase1.ipynb
+++ b/Phase1/Code/Final Project Phase1.ipynb
@@ -12,14 +12,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Version 0.1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Import relavant packages\n",
+    "# Import packages\n",
     "%matplotlib inline\n",
     "import pylab as plt\n",
     "import pandas as pd\n",
