Update Final Project Phase3.ipynb

--- a/Phase3/Code/Final Project Phase3.ipynb
+++ b/Phase3/Code/Final Project Phase3.ipynb
@@ -1890,6 +1890,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####  Cluster"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
@@ -1920,6 +1927,13 @@
     "model.fit(df.iloc[:,1:10])\n",
     "labels = model.predict(df.iloc[:,1:10])\n",
     "print(type(labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  DataFrame"
    ]
   },
   {
@@ -2227,13 +2241,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "####  Error Rate Function"
+   ]
   },
   {
    "cell_type": "code",
