Update Final Project Phase3.ipynb

--- a/Phase3/Code/Final Project Phase3.ipynb
+++ b/Phase3/Code/Final Project Phase3.ipynb
@@ -2250,13 +2250,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Note: 2 - benign cells; 4 - malign cells"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of actual label 2 is 458\n",
+      "Total number of actual label 4 is 241\n",
+      "Total number of predicted label 2 is 466\n",
+      "Total number of predicted label 4 is 233\n"
+     ]
+    }
+   ],
+   "source": [
+    "(a2,a4)=df['CLASS'].value_counts()\n",
+    "(p2,p4)=df['kmeansLabels'].value_counts()\n",
+    "print(\"Total number of actual label 2 is\",a2)\n",
+    "print(\"Total number of actual label 4 is\",a4)\n",
+    "print(\"Total number of predicted label 2 is\",p2)\n",
+    "print(\"Total number of predicted label 4 is\",p4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "##### Manual Calculation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    " (p2a2,p2a4,p4a4,p4a2)=df.groupby('kmeansLabels')['CLASS'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error rate for Benign cells 0.0236051502146\n",
+      "Error rate for Malign cells 0.0815450643777\n",
+      "Total error rate 0.0429184549356\n"
+     ]
+    }
+   ],
+   "source": [
+    "error_benign = p4a2/p2\n",
+    "error_malign = p2a4/p4\n",
+    "error_total = (p4a2+p2a4)/(p4+p2)\n",
+    "print(\"Error rate for Benign cells\",error_benign)\n",
+    "print(\"Error rate for Malign cells\",error_malign)\n",
+    "print(\"Total error rate\",error_total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "##### Error rate function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error rate for Benign cells\n",
+      "Error rate for Malign cells\n",
+      "Total error rate\n"
+     ]
+    }
+   ],
+   "source": [
+    "def errorrate():\n",
+    "    prediction=\"kmeansLabels\"\n",
+    "    actual = \"CLASS\"\n",
+    "    \n",
+    "    \n",
+    "    print(\"Error rate for Benign cells\")\n",
+    "    print(\"Error rate for Malign cells\")\n",
+    "    print(\"Total error rate\")\n",
+    "    ()\n",
+    "\n",
+    "errorrate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Report Statement"
+   ]
   },
   {
    "cell_type": "code",
