Update Final Project Phase3.ipynb

--- a/Phase3/Code/Final Project Phase3.ipynb
+++ b/Phase3/Code/Final Project Phase3.ipynb
@@ -2305,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 145,
    "metadata": {
     "collapsed": false
    },
@@ -2314,9 +2314,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error rate for Benign cells 0.0236051502146\n",
-      "Error rate for Malign cells 0.0815450643777\n",
-      "Total error rate 0.0429184549356\n"
+      "Error rate for Benign cells 0.02\n",
+      "Error rate for Malign cells 0.08\n",
+      "Total error rate 0.04\n"
      ]
     }
    ],
@@ -2324,9 +2324,9 @@
     "error_benign = p4a2/p2\n",
     "error_malign = p2a4/p4\n",
     "error_total = (p4a2+p2a4)/(p4+p2)\n",
-    "print(\"Error rate for Benign cells\",error_benign)\n",
-    "print(\"Error rate for Malign cells\",error_malign)\n",
-    "print(\"Total error rate\",error_total)"
+    "print(\"Error rate for Benign cells\",round(error_benign,2))\n",
+    "print(\"Error rate for Malign cells\",round(error_malign,2))\n",
+    "print(\"Total error rate\",round(error_total,2))"
    ]
   },
   {
@@ -2339,7 +2339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -2348,9 +2348,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error rate for Benign cells\n",
-      "Error rate for Malign cells\n",
-      "Total error rate\n"
+      "Error rate for Benign cells is: 0.02\n",
+      "Error rate for Malign cells is:0.08\n",
+      "Total error rate is: 0.04\n"
      ]
     }
    ],
@@ -2358,11 +2358,23 @@
     "def errorrate():\n",
     "    prediction=\"kmeansLabels\"\n",
     "    actual = \"CLASS\"\n",
-    "    \n",
-    "    \n",
-    "    print(\"Error rate for Benign cells\")\n",
-    "    print(\"Error rate for Malign cells\")\n",
-    "    print(\"Total error rate\")\n",
+    "    total_error_count=0\n",
+    "    total=0\n",
+    "    for j in df[actual].unique():\n",
+    "        total_j=(df[prediction]==j).sum()\n",
+    "        total=total+total_j\n",
+    "        for i in df[prediction].unique():\n",
+    "            if j != i:\n",
+    "                error_count=((df[prediction]==i) & (df[actual]==j)).sum()\n",
+    "                total_error_count=total_error_count+error_count\n",
+    "                error_rate = error_count/total_j\n",
+    "                if j==2:\n",
+    "                    print(\"Error rate for Benign cells is: %.2f\" % error_rate) \n",
+    "                elif j==4:\n",
+    "                    print(\"Error rate for Malign cells is:%.2f\"%error_rate)\n",
+    "                \n",
+    "    total_error_rate= total_error_count/total\n",
+    "    print(\"Total error rate is: %.2f\" % total_error_rate)\n",
     "    ()\n",
     "\n",
     "errorrate()"
@@ -2374,6 +2386,24 @@
    "source": [
     "## Report Statement"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
