Update Final Project Phase3.ipynb

--- a/Phase3/Code/Final Project Phase3.ipynb
+++ b/Phase3/Code/Final Project Phase3.ipynb
@@ -2381,6 +2381,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error rate for Benign cells is: 0.02\n",
+      "Error rate for Malign cells is:0.08\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.023605150214592276"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def errorrate(x):\n",
+    "    prediction=\"kmeansLabels\"\n",
+    "    actual = \"CLASS\"\n",
+    "    \n",
+    "    total=(df[prediction]==x).sum()\n",
+    "    error_count=((df[prediction]!=x) & (df[actual]==x)).sum()\n",
+    "    error_rate = error_count/total\n",
+    "    \n",
+    "    return error_rate\n",
+    "    ()\n",
+    "    \n",
+    "print(\"Error rate for Benign cells is: %.2f\" % errorrate(2))\n",
+    "print(\"Error rate for Malign cells is:%.2f\"% errorrate(4))\n",
+    "#print(errorrate()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
