Update Final Project Phase2.ipynb

--- a/Phase2/Code/Final Project Phase2.ipynb
+++ b/Phase2/Code/Final Project Phase2.ipynb
@@ -1819,7 +1819,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A7, A3, A9 have lot of variation compared to other columns"
+    "A7 has the maximum variation followed by A3, A9 and other columns"
    ]
   },
   {
