Update Final Project Phase3.ipynb

--- a/Phase3/Code/Final Project Phase3.ipynb
+++ b/Phase3/Code/Final Project Phase3.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import packages\n",
@@ -32,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Loading the data file from github data folder\n",
@@ -50,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 224,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -89,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -119,7 +127,9 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Replacing all ? values with NaN\n",
@@ -139,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -168,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -195,7 +209,9 @@
   {
    "cell_type": "code",
    "execution_count": 229,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -221,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#replacing null values with mean\n",
@@ -238,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -269,7 +289,9 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -312,7 +334,9 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -340,7 +364,9 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -365,7 +391,9 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -394,7 +422,9 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -436,7 +466,9 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -471,7 +503,9 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Summarize by reporting which values might need standardization in the future \n",
@@ -499,7 +533,9 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import Package\n",
@@ -517,7 +553,9 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -544,7 +582,9 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# converting data frame columns in to numpy array\n",
@@ -562,7 +602,9 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -602,7 +644,9 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# run KMeans on df (with n_clusters=4)\n",
@@ -622,7 +666,9 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -661,7 +707,9 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# make a range from 1 to 15\n",
@@ -679,7 +727,9 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -726,7 +776,9 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Import standard deviation package\n",
@@ -736,7 +788,9 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -755,7 +809,9 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -810,7 +866,9 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Perform normalization\n",
@@ -821,7 +879,9 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "scaler = StandardScaler()\n",
@@ -836,7 +896,9 @@
   {
    "cell_type": "code",
    "execution_count": 252,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -871,7 +933,9 @@
   {
    "cell_type": "code",
    "execution_count": 253,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#KMeans algorithm with 500 iterations and 20 initial centroids \n",
@@ -881,7 +945,9 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -927,7 +993,9 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1236,7 +1304,9 @@
   {
    "cell_type": "code",
    "execution_count": 256,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1269,7 +1339,9 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1331,7 +1403,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1345,7 +1417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
